fix: tabs on mobile

--- a/blocks/pdp/pdp.css
+++ b/blocks/pdp/pdp.css
@@ -224,6 +224,10 @@
   background-color: #e9e9e9;
 }
 
+.details .tabs {
+  flex-direction: column;
+}
+
 .tab {
   padding: 8px 16px;
   cursor: pointer;
